bindata/assets/kube-scheduler/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: openshift-kube-scheduler
  namespace: openshift-kube-scheduler
  annotations:
    kubectl.kubernetes.io/default-container: kube-scheduler
    target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
  labels:
    app: openshift-kube-scheduler
    scheduler: "true"
    revision: "REVISION"
spec:
  containers:
  - name: kube-scheduler
    image: ${IMAGE}
    imagePullPolicy: IfNotPresent
    securityContext:
      readOnlyRootFilesystem: true
    terminationMessagePolicy: FallbackToLogsOnError
    command: ["hyperkube", "kube-scheduler"]
    args:
    - --config=/etc/kubernetes/static-pod-resources/configmaps/config/config.yaml
    - --cert-dir=/var/run/kubernetes
    - --authentication-kubeconfig=/etc/kubernetes/static-pod-resources/configmaps/scheduler-kubeconfig/kubeconfig
    - --authorization-kubeconfig=/etc/kubernetes/static-pod-resources/configmaps/scheduler-kubeconfig/kubeconfig
    resources:
      requests:
        memory: 50Mi
        cpu: 15m
    ports:
    - containerPort: 10259
    volumeMounts:
    - mountPath: /tmp
      name: tmp
    - mountPath: /etc/kubernetes/static-pod-resources
      name: resource-dir
    - mountPath: /etc/kubernetes/static-pod-certs
      name: cert-dir
    - mountPath: /var/run/kubernetes
      name: var-run-kubernetes
    livenessProbe:
      httpGet:
        scheme: HTTPS
        port: 10259
        path: healthz
      initialDelaySeconds: 45
      timeOutSeconds: 10
    readinessProbe:
      httpGet:
        scheme: HTTPS
        port: 10259
        path: healthz
      initialDelaySeconds: 45
      timeOutSeconds: 10
  - name: kube-scheduler-cert-syncer
    image: ${OPERATOR_IMAGE}
    imagePullPolicy: IfNotPresent
    securityContext:
      readOnlyRootFilesystem: true
    terminationMessagePolicy: FallbackToLogsOnError
    command: ["cluster-kube-scheduler-operator", "cert-syncer"]
    args:
      - --kubeconfig=/etc/kubernetes/static-pod-resources/configmaps/kube-scheduler-cert-syncer-kubeconfig/kubeconfig
      - --namespace=$(POD_NAMESPACE)
      - --destination-dir=/etc/kubernetes/static-pod-certs
    resources:
      requests:
        memory: 50Mi
        cpu: 5m
    volumeMounts:
      - mountPath: /tmp
        name: tmp
      - mountPath: /etc/kubernetes/static-pod-resources
        name: resource-dir
      - mountPath: /etc/kubernetes/static-pod-certs
        name: cert-dir
  - name: kube-scheduler-recovery-controller
    image: ${OPERATOR_IMAGE}
    imagePullPolicy: IfNotPresent
    securityContext:
      readOnlyRootFilesystem: true
    terminationMessagePolicy: FallbackToLogsOnError
    command: ["/bin/bash", "-euxo", "pipefail", "-c"]
    args:
      - |
        timeout 3m /bin/bash -exuo pipefail -c 'while [ -n "$(ss -Htanop \( sport = 11443 \))" ]; do sleep 1; done'

        exec cluster-kube-scheduler-operator cert-recovery-controller --kubeconfig=/etc/kubernetes/static-pod-resources/configmaps/kube-scheduler-cert-syncer-kubeconfig/kubeconfig  --namespace=${POD_NAMESPACE} --listen=0.0.0.0:11443 -v=2
    resources:
      requests:
        memory: 50Mi
        cpu: 5m
    volumeMounts:
      - mountPath: /tmp
        name: tmp
      - mountPath: /etc/kubernetes/static-pod-resources
        name: resource-dir
      - mountPath: /etc/kubernetes/static-pod-certs
        name: cert-dir
  hostNetwork: true
  priority: 2000001000
  priorityClassName: system-node-critical
  tolerations:
  - operator: "Exists"
  volumes:
  - emptyDir: {}
    name: tmp
  - hostPath:
      path: /etc/kubernetes/static-pod-resources/kube-scheduler-pod-REVISION
    name: resource-dir
  - hostPath:
      path: /etc/kubernetes/static-pod-resources/kube-scheduler-certs
    name: cert-dir
  - emptyDir: {}
    name: var-run-kubernetes
