bindata/assets/kube-scheduler/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-kube-scheduler
  name: scheduler
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: serving-cert
  labels:
    prometheus: "kube-scheduler"
spec:
  selector:
    scheduler: "true"
  ports:
  - name: https
    port: 443
    targetPort: 10259
